# achievements-hunter

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  pyrightconfig.json
.github/workflows/: ci.yml
scripts/: README.md  steam_auth.py  steam_friends.py  steam_game_achievements.py  steam_login.py  steam_platinum.py  steam_ytd_achievements.py
src/steam_tracker/: achievement_guide.py  config.py  contracts.py  db.py  leaderboard.py  leaderboard_cli.py  llm_provider.py  parser.py  platinum_cli.py  platinum_report.py  repository.py  settings.py  steam_api.py  steam_auth.py  steam_friends_cli.py  steam_game_achievements_cli.py  steam_http.py  steam_login.py  strategy_generator.py  utils.py  web_http.py
tests/: test_steam_ytd_achievements.py
tests/scripts/: conftest.py  test_steam_ytd_achievements.py
tests/steam_tracker/: conftest.py  test_achievement_guide.py  test_contracts.py  test_db.py  test_leaderboard.py  test_leaderboard_cli.py  test_llm_provider.py  test_parser.py  test_platinum_cli.py  test_platinum_report.py  test_repository.py  test_steam_api.py  test_steam_auth.py  test_steam_friends_cli.py  test_steam_game_achievements_cli.py  test_steam_http.py  test_steam_login.py  test_strategy_generator.py  test_utils.py  test_web_http.py
