[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/steam_tracker"]

[project]
name = "achievements-hunter"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32",
    "python-dotenv>=1.0",
    "rsa>=4.9",
    "keyring>=25.0",
    "rich>=13.0",
    "vdf>=3.4",
    "sqlalchemy>=2.0",
    "pydantic>=2.0",
    "anthropic>=0.110",
    "openai>=2.40",
    "python-docx>=1.1",
    "uuid-utils>=0.16",
]

[project.scripts]
steam-achievements = "steam_tracker.leaderboard_cli:main"
steam-login = "steam_tracker.steam_auth:main"
steam-friends = "steam_tracker.steam_friends_cli:main"
steam-game = "steam_tracker.steam_game_achievements_cli:main"
steam-platinum = "steam_tracker.platinum_cli:main"

[dependency-groups]
dev = [
    "pytest>=9.0.0",
    "pyright>=1.1",
    "ruff>=0.15.0",
    "pre-commit>=4.5",
    "types-requests>=2.32",
]

[tool.ruff]
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "I",      # isort (import sorting)
    "N",      # pep8-naming
    "W",      # pycodestyle warnings
    "UP",     # pyupgrade (modern Python syntax)
    "B",      # flake8-bugbear (common bugs)
    "SIM",    # flake8-simplify
    "RUF",    # Ruff-specific rules
    "ARG",    # flake8-unused-arguments
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "standard"
venvPath = "."
venv = ".venv"
